--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>User - Tebak Kartu Natal Animasi</title>
+<title>User - Tebak Kartu Natal Modern</title>
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
-  background:#08121c;
+  background:#0a0f18;
   color:#fff;
   display:flex;
   justify-content:center;
@@ -19,57 +20,72 @@ body{
   padding:20px;
   overflow:hidden;
   position:relative;
+
+  /* Glow Natal */
+  box-shadow: inset 0 0 200px rgba(255,0,0,0.25),
+              inset 0 0 200px rgba(0,255,0,0.25);
 }
 
-/* Background pohon Natal & salju */
+/* Background animasi */
 .tree, .snowflake{
   position:absolute;
   pointer-events:none;
   z-index:0;
 }
 .tree{
-  width:30px;
-  height:40px;
-  background:linear-gradient(to top, #0a7b1f 60%, #00ff00 100%);
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  width:40px;
+  height:55px;
+  background:linear-gradient(to top,#0a7b1f,#00ff4c);
+  clip-path: polygon(50% 0%,0% 100%,100% 100%);
   opacity:0.7;
   animation:treeFall linear infinite;
 }
 @keyframes treeFall{
-  0%{transform:translateY(-50px) scale(0.5); opacity:0.6;}
-  100%{transform:translateY(110vh) scale(1); opacity:0;}
+  0%{transform:translateY(-60px) scale(0.6);opacity:0.6;}
+  100%{transform:translateY(110vh) scale(1);opacity:0;}
 }
+
 .snowflake{
-  width:6px;
-  height:6px;
+  width:7px;
+  height:7px;
   background:#fff;
   border-radius:50%;
   opacity:0.8;
   animation:snowFall linear infinite;
 }
 @keyframes snowFall{
-  0%{transform:translateY(-10px);}
+  0%{transform:translateY(-20px);}
   100%{transform:translateY(110vh);}
 }
 
 /* Wrapper utama */
 .wrap{
   width:100%;
-  max-width:920px;
-  background:#111;
-  padding:20px;
-  border-radius:12px;
-  border:1px solid rgba(212,175,55,0.1);
-  box-shadow:0 0 30px rgba(0,0,0,0.5);
-  position:relative;
+  max-width:900px;
+  background:rgba(20,20,20,0.9);
+  padding:28px;
+  border-radius:20px;
+  border:1px solid rgba(255,255,255,0.15);
+  backdrop-filter:blur(8px);
+  box-shadow:0 0 35px rgba(255,255,255,0.08);
   z-index:1;
 }
 
-/* Judul */
+/* Judul modern */
 h1{
-  color:#d4af37;
-  margin-bottom:10px;
+  color:#ffef9f;
+  margin-bottom:16px;
   text-align:center;
+  font-size:32px;
+  font-weight:700;
+  text-shadow:0 0 10px rgba(255,255,255,0.4);
+}
+h1::after{
+  content:"🎄";
+  display:block;
+  margin-top:6px;
+  font-size:26px;
+  opacity:0.8;
 }
 
 /* Input kode */
@@ -77,83 +93,102 @@ h1{
   display:flex;
   gap:10px;
   align-items:center;
-  margin-bottom:18px;
+  margin-bottom:20px;
   flex-wrap:wrap;
 }
 input{
-  padding:10px;
-  border-radius:8px;
+  padding:12px 14px;
+  border-radius:10px;
   border:none;
-  background:#0b0f10;
+  background:#0f151c;
   color:#fff;
   flex:1;
+  font-size:15px;
+  outline:none;
+  border:1px solid rgba(255,255,255,0.15);
+  transition:.25s;
+}
+input:focus{
+  border-color:#ffef9f;
+  box-shadow:0 0 10px rgba(255,255,200,0.4);
 }
 .btn{
-  background:#d4af37;
+  background:#ffef9f;
   color:#111;
-  padding:10px 12px;
-  border-radius:8px;
+  padding:12px 18px;
+  border-radius:10px;
   border:none;
   cursor:pointer;
-  font-weight:600;
+  font-size:15px;
+  font-weight:700;
+  transition:.25s;
+}
+.btn:hover{
+  background:#fff8c9;
 }
 
-/* Kotak hadiah */
+/* Kotak hadiah modern */
 .prize-list{
   display:flex;
   flex-wrap:wrap;
-  gap:12px;
+  gap:14px;
   margin-top:12px;
   justify-content:center;
 }
 .prize-item{
   flex:1 1 30%;
-  background:linear-gradient(135deg,#ff4d4d,#d4af37,#4caf50);
-  padding:16px;
-  border-radius:12px;
+  background:linear-gradient(135deg,#ff4d4d,#ffb84d,#4caf50);
+  padding:18px;
+  border-radius:14px;
   border:2px solid #fff;
   text-align:center;
-  font-size:16px;
-  font-weight:700;
-  color:#fff;
+  font-size:18px;
+  font-weight:800;
+  color:#111;
+  text-shadow:0 0 3px rgba(255,255,255,0.28);
   position:relative;
-  box-shadow:0 0 12px rgba(255,255,255,0.3);
+  box-shadow:0 0 15px rgba(255,255,255,0.4),
+             0 0 25px rgba(255,0,0,0.4);
   transition:transform .3s, box-shadow .3s;
 }
 .prize-item:hover{
-  transform:scale(1.05);
-  box-shadow:0 0 20px rgba(255,255,255,0.6);
+  transform:scale(1.07);
+  box-shadow:0 0 20px rgba(255,255,255,0.7),
+             0 0 35px rgba(0,255,0,0.5);
 }
 .prize-item::before{
-  content:"🎄";
+  content:"❄";
   position:absolute;
-  top:-8px;
+  top:-10px;
   left:10px;
-  font-size:18px;
+  font-size:20px;
 }
 
 /* Grid kartu */
 .grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  gap:14px;
-  margin-top:20px;
+  gap:16px;
+  margin-top:26px;
 }
 .card{
-  height:140px;
-  border-radius:10px;
-  perspective:1000px;
+  height:150px;
+  border-radius:12px;
+  perspective:1100px;
   cursor:pointer;
   position:relative;
 }
-.card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
+.card.locked{
+  filter:grayscale(.3) opacity(.7);
+  cursor:not-allowed;
+}
 .card-inner{
   position:relative;
   width:100%;
   height:100%;
   transition:transform .6s;
   transform-style:preserve-3d;
-  border-radius:10px;
+  border-radius:12px;
 }
 .card.flip .card-inner{transform:rotateY(180deg);}
 .card-front,.card-back{
@@ -161,83 +196,91 @@ input{
   width:100%;
   height:100%;
   backface-visibility:hidden;
-  border-radius:10px;
+  border-radius:12px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-weight:600;
-}
-.card-front{background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);color:#bfc6c9;}
-.card-back{background:rgba(212,175,55,0.15);transform:rotateY(180deg);color:#111;}
-
-.badge{
-  position:absolute;
-  top:6px;
-  right:6px;
-  background:rgba(0,0,0,0.4);
-  color:#d4af37;
-  padding:3px 6px;
-  border-radius:6px;
   font-weight:700;
-  font-size:12px;
+  font-size:18px;
+}
+.card-front{
+  background:#121820;
+  border:1px solid rgba(255,255,255,0.1);
+  color:#c9d0d7;
+  box-shadow: inset 0 0 20px rgba(255,255,255,0.05);
+}
+.card-back{
+  background:linear-gradient(135deg,#fff7c2,#ffe68a);
+  transform:rotateY(180deg);
+  color:#111;
 }
 
-.result-area{margin-top:16px;}
-.small{font-size:13px;color:#bfc6c9;text-align:center;}
+/* Hasil */
+.result-area{
+  margin-top:18px;
+  text-align:center;
+}
+.small{
+  font-size:14px;
+  color:#d9e0e7;
+  margin-bottom:6px;
+}
 
 /* Confetti */
 .confetti{
-  position:absolute;width:8px;height:8px;background:rgba(212,175,55,0.9);
+  position:absolute;width:8px;height:8px;background:rgba(255,255,120,0.9);
   pointer-events:none;animation:confetti-fall 1s linear forwards;
 }
 @keyframes confetti-fall{
   0%{transform:translateY(0px) rotate(0deg);opacity:1;}
-  100%{transform:translateY(120px) rotate(360deg);opacity:0;}
+  100%{transform:translateY(150px) rotate(360deg);opacity:0;}
 }
 </style>
 </head>
 <body>
-<!-- Animasi pohon & salju -->
+
 <script>
 function createTree(){
   const tree=document.createElement('div');
   tree.className='tree';
   tree.style.left=Math.random()*100+'vw';
-  tree.style.top='-50px';
-  tree.style.animationDuration=(5+Math.random()*5)+'s';
+  tree.style.animationDuration=(8+Math.random()*6)+'s';
   document.body.appendChild(tree);
-  setTimeout(()=>tree.remove(),10000);
+  setTimeout(()=>tree.remove(),15000);
 }
 function createSnow(){
   const snow=document.createElement('div');
   snow.className='snowflake';
   snow.style.left=Math.random()*100+'vw';
-  snow.style.animationDuration=(4+Math.random()*4)+'s';
+  snow.style.animationDuration=(5+Math.random()*4)+'s';
   document.body.appendChild(snow);
-  setTimeout(()=>snow.remove(),8000);
+  setTimeout(()=>snow.remove(),9000);
 }
-setInterval(createTree,700);
-setInterval(createSnow,150);
+setInterval(createTree,900);
+setInterval(createSnow,130);
 </script>
 
 <div class="wrap">
-<h1>Tebak Kartu Natal</h1>
+<h1>Event Tebak Kartu Natal</h1>
+
 <div class="code-row">
-<input id="codeInput" placeholder="Masukkan kode..."/>
-<button id="verifyBtn" class="btn">Verify</button>
-<div class="small" id="status">Status: belum terkoneksi</div>
+  <input id="codeInput" placeholder="Masukkan kode..."/>
+  <button id="verifyBtn" class="btn">Verify</button>
+  <div class="small" id="status">Status: belum terkoneksi</div>
 </div>
 
 <div class="prize-list">
-  <div class="prize-item">Platinum: 10,000</div>
-  <div class="prize-item">Diamond: 25,000</div>
-  <div class="prize-item">Super Diamond: 500,000</div>
+  <div class="prize-item">🎁 Platinum: 10,000</div>
+  <div class="prize-item">🎅 Diamond: 25,000</div>
+  <div class="prize-item">❄ Super Diamond: 500,000</div>
 </div>
 
 <div id="gridWrap" class="grid"></div>
 <div class="result-area" id="resultArea"></div>
 </div>
 
+
+<!-- FIREBASE SCRIPT (SAMA DENGAN PUNYAMU) -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
@@ -291,19 +334,19 @@ function fetchConfig(){
   onValue(dbRef,(snap)=>{
     if(snap.exists()){
       serverConfig = snap.val();
-      setStatus('Siap - data tersedia');
+      setStatus('Siap — data tersedia');
       if(!unlocked) buildGrid();
     }else setStatus('Belum ada konfigurasi');
   });
 }
 
 function createConfetti(x,y){
-  for(let i=0;i<20;i++){
+  for(let i=0;i<25;i++){
     const conf=document.createElement('div');
     conf.className='confetti';
     conf.style.left=(x + (Math.random()*40-20))+'px';
     conf.style.top=(y + (Math.random()*40-20))+'px';
-    conf.style.background=['#d4af37','#ff4d4d','#4caf50','#2196f3'][Math.floor(Math.random()*4)];
+    conf.style.background=['#ffef9f','#ff4d4d','#4caf50','#fff'][Math.floor(Math.random()*4)];
     document.body.appendChild(conf);
     setTimeout(()=>conf.remove(),1000);
   }
@@ -314,36 +357,51 @@ async function onCardClick(e){
   const el = e.currentTarget;
   const idx = Number(el.dataset.index);
   if(!unlocked || revealed.has(idx)) return;
+
   const cards = serverConfig?.cards||[];
   const value = cards[idx]||'Kosong';
+
   el.classList.add('flip');
-  el.querySelector('.label').textContent = value;
+  el.querySelector('.label').textContent=value;
+
   revealed.add(idx);
   selectedCount++;
-  const msg = document.createElement('div');
-  msg.className = 'small';
-  msg.textContent = `Kamu membuka Kartu ${idx+1}: ${value}`;
+
+  const msg=document.createElement('div');
+  msg.className='small';
+  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${value}`;
   resultArea.prepend(msg);
+
   if(['Platinum','Diamond','Super Diamond'].includes(value)){
     const rect = el.getBoundingClientRect();
-    createConfetti(rect.left + rect.width/2, rect.top + rect.height/2);
+    createConfetti(rect.left+rect.width/2,rect.top+rect.height/2);
   }
+
   if(selectedCount>=maxSelect){ saveUsedCode(); }
 }
 
 async function saveUsedCode(){
   const code = codeInput.value.trim();
   if(!code || !serverConfig) return;
-  const snap = await get(ref(db, "gameConfig/usedCodes/"+code));
+
+  const snap = await get(ref(db,"gameConfig/usedCodes/"+code));
   if(snap.exists()){ setStatus("Kode sudah dipakai"); return; }
-  const cardsArr = Array.from(gridWrap.querySelectorAll('.card')).map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
-  await set(ref(db,"gameConfig/usedCodes/"+code), {cards:cardsArr, time:Date.now()});
+
+  const cardsArr = Array.from(gridWrap.querySelectorAll('.card'))
+    .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
+
+  await set(ref(db,"gameConfig/usedCodes/"+code), {
+    cards:cardsArr,
+    time:Date.now()
+  });
+
   setStatus("Kode & kartu tersimpan ✓");
 }
 
 verifyBtn.addEventListener('click',()=>{
-  const code = codeInput.value.trim();
-  if(!serverConfig){setStatus('Tidak ada konfigurasi'); return;}
+  const code=codeInput.value.trim();
+  if(!serverConfig){setStatus('Tidak ada konfigurasi');return;}
+
   if(code===serverConfig.code){
     unlocked=true;
     setStatus('Kode benar — pilih kartu!');
@@ -357,5 +415,6 @@ verifyBtn.addEventListener('click',()=>{
 buildGrid();
 fetchConfig();
 </script>
+
 </body>
 </html>
