--- a/index.html
+++ b/index.html
@@ -3,192 +3,175 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Natal Glow Reward</title>
+<title>Event Natal - Premium Glow</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: radial-gradient(circle at top, #1b1b1b, #0a0a0a);
+  overflow-x: hidden;
+  color: #fff;
+}
 
-    body {
-        margin: 0;
-        font-family: 'Poppins', sans-serif;
-        background: #0c0f12;
-        color: #fff;
-        overflow-x: hidden;
-    }
+/* ❄ BACKGROUND SALJU */
+.snow {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background-image:
+    url('https://i.imgur.com/2Jg6YxR.png'),
+    url('https://i.imgur.com/2Jg6YxR.png'),
+    url('https://i.imgur.com/2Jg6YxR.png');
+  animation: snowMove 30s linear infinite;
+  opacity: .6;
+}
+@keyframes snowMove {
+  0% { background-position: 0 0, 0 -200px, 0 -400px; }
+  100% { background-position: 0 400px, 0 200px, 0 0; }
+}
 
-    /* ❄ Animasi Salju */
-    .snow {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        top: 0;
-        left: 0;
-        background-image:
-            url('https://i.ibb.co/FXpbV3h/snow1.png'),
-            url('https://i.ibb.co/FXpbV3h/snow2.png'),
-            url('https://i.ibb.co/FXpbV3h/snow3.png');
-        animation: snow 20s linear infinite;
-    }
-    @keyframes snow {
-        0% { background-position: 0 0, 0 0, 0 0; }
-        100% { background-position: 0 2000px, 0 1500px, 0 1000px; }
-    }
+/* 🎄 Pohon Natal */
+.tree {
+  width: 160px;
+  height: 160px;
+  background: url("https://i.imgur.com/MpH5V18.png") center/contain no-repeat;
+  margin: 20px auto 10px;
+  filter: drop-shadow(0 0 12px #ff3);
+  animation: treeGlow 4s ease-in-out infinite;
+}
+@keyframes treeGlow {
+  0% { filter: drop-shadow(0 0 5px #f33); }
+  50% { filter: drop-shadow(0 0 15px #ffd900); }
+  100% { filter: drop-shadow(0 0 5px #f33); }
+}
 
-    /* 🎄 Background Pohon Natal bergerak */
-    .tree-bg {
-        position: fixed;
-        inset: 0;
-        background: url("https://i.ibb.co/QpnSfGm/christmastree.png") center/contain no-repeat;
-        opacity: 0.12;
-        animation: floatTree 6s ease-in-out infinite alternate;
-        pointer-events: none;
-    }
-    @keyframes floatTree {
-        from { transform: translateY(-10px); }
-        to { transform: translateY(10px); }
-    }
+/* 🏆 Kotak daftar hadiah */
+.prize-box {
+  width: 92%;
+  margin: auto;
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 224, 160, 0.3);
+  border-radius: 14px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 0 12px rgba(255, 220, 150, .2);
+}
 
-    .container {
-        position: relative;
-        z-index: 5;
-        padding: 25px;
-        max-width: 450px;
-        margin: auto;
-        text-align: center;
-    }
+.prize-title {
+  text-align: center;
+  font-size: 20px;
+  color: #ffe7a3;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
 
-    h1 {
-        font-size: 32px;
-        color: #e8c65f;
-        text-shadow: 0 0 12px rgba(255,230,140,0.9);
-        margin-bottom: 10px;
-    }
+.prize-item {
+  background: rgba(0,0,0,.4);
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(255,220,160,0.3);
+  margin-bottom: 8px;
+  font-size: 15px;
+}
 
-    .inputBox {
-        background: rgba(255,255,255,0.07);
-        padding: 15px;
-        border-radius: 14px;
-        border: 1px solid rgba(255,215,0,0.3);
-        box-shadow: 0 0 12px rgba(255,215,0,0.2);
-    }
+/* 🃏 Grid Card Premium */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 12px;
+  width: 92%;
+  margin: 20px auto 0;
+}
 
-    input {
-        width: 100%;
-        padding: 14px;
-        border-radius: 10px;
-        border: none;
-        font-size: 16px;
-        outline: none;
-        margin-bottom: 10px;
-        background: rgba(255,255,255,0.13);
-        color: #fff;
-    }
+.card {
+  height: 120px;
+  background: linear-gradient(145deg, #222, #111);
+  border-radius: 12px;
+  border: 1px solid rgba(255,220,160,0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 16px;
+  color: #ffe7a3;
+  box-shadow: 0 0 12px rgba(255, 220, 150, .2);
+  transition: .3s;
+}
+.card:hover {
+  transform: scale(1.06);
+  box-shadow: 0 0 18px rgba(255, 220, 150, .4);
+}
 
-    button {
-        width: 100%;
-        padding: 14px;
-        border-radius: 10px;
-        border: none;
-        background: linear-gradient(45deg,#d4af37,#ffef9f);
-        color: #111;
-        font-weight: 700;
-        cursor: pointer;
-        font-size: 16px;
-        box-shadow: 0 0 15px rgba(255,215,0,0.5);
-        transition: .2s;
-    }
-    button:active {
-        transform: scale(.97);
-    }
+input {
+  width: 90%;
+  margin: 20px auto 10px;
+  display: block;
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  background: #fff;
+  color: #000;
+}
 
-    /* 🎁 Kotak hadiah (hasil cek) */
-    .hasilBox {
-        margin-top: 20px;
-        background: rgba(255,255,255,0.08);
-        padding: 18px;
-        border-radius: 14px;
-        border: 1px solid rgba(255,215,0,0.3);
-        box-shadow: 0 0 14px rgba(200,150,50,0.25);
-        display: none;
-    }
-
-    .rewardItem {
-        background: rgba(255,255,255,0.12);
-        margin: 8px 0;
-        padding: 12px;
-        border-radius: 10px;
-        border-left: 4px solid #d4af37;
-        font-size: 17px;
-        text-align: left;
-    }
+.btn {
+  display: block;
+  width: 90%;
+  margin: auto;
+  padding: 13px;
+  margin-top: 10px;
+  background: #ffcf4b;
+  border-radius: 10px;
+  border: none;
+  font-weight: 700;
+  font-size: 17px;
+  color: #4a2a00;
+  cursor: pointer;
+  box-shadow: 0 0 12px rgba(255, 219, 130, .5);
+}
+.btn:hover {
+  filter: brightness(1.1);
+}
 </style>
 </head>
 <body>
 
 <div class="snow"></div>
-<div class="tree-bg"></div>
+<div class="tree"></div>
 
-<div class="container">
-    <h1>🎄 Natal Glow Reward</h1>
+<h2 style="text-align:center;color:#ffe7a3;margin-top:-5px;">
+  🎄 EVENT NATAL PREMIUM GLOW 🎁
+</h2>
 
-    <div class="inputBox">
-        <input type="text" id="codeInput" placeholder="Masukkan Kode Hadiah">
-        <button id="checkBtn">CEK HADIAH</button>
-    </div>
+<div class="prize-box">
+  <div class="prize-title">🎁 Daftar Hadiah</div>
 
-    <div id="hasil" class="hasilBox"></div>
+  <div class="prize-item">🎄 Platinum — Rp 10.000</div>
+  <div class="prize-item">💎 Diamond — Rp 25.000</div>
+  <div class="prize-item">🌟 Super Diamond — Rp 500.000</div>
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, get, update } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+<input id="kode" placeholder="Masukkan Kode Anda...">
 
-const firebaseConfig = {
-  apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
-  authDomain: "hadiahnatal-a033b.firebaseapp.com",
-  databaseURL: "https://hadiahnatal-a033b-default-rtdb.firebaseio.com",
-  projectId: "hadiahnatal-a033b",
-  storageBucket: "hadiahnatal-a033b.firebasestorage.app",
-  messagingSenderId: "577153304596",
-  appId: "1:577153304596:web:5f255e886a379ccb12bf01"
-};
+<button class="btn">CEK KODE</button>
 
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
+<h3 style="text-align:center;margin-top:25px;color:#ffe7a3;">Pilih Kartu Anda</h3>
 
-const input = document.getElementById("codeInput");
-const btn = document.getElementById("checkBtn");
-const hasil = document.getElementById("hasil");
-
-btn.onclick = async () => {
-    const code = input.value.trim();
-    if(!code) return;
-
-    const codeRef = ref(db, "history/" + code);
-    const snap = await get(codeRef);
-
-    if(!snap.exists()){
-        hasil.style.display = "block";
-        hasil.innerHTML = `<div class="rewardItem" style="border-left-color:#ff6b6b;">Kode tidak ditemukan</div>`;
-        return;
-    }
-
-    const data = snap.val();
-
-    // tampilkan hadiah
-    hasil.style.display = "block";
-    hasil.innerHTML = `
-        <div class="rewardItem"><strong>Kode:</strong> ${code}</div>
-        <div class="rewardItem"><strong>Hadiah:</strong> ${data.cards.join(", ")}</div>
-        <div class="rewardItem"><strong>Waktu:</strong> ${new Date(data.time).toLocaleString()}</div>
-        <div class="rewardItem"><strong>Status:</strong> ${data.used ? "Sudah digunakan ❌" : "Belum digunakan ✔"}</div>
-    `;
-
-    // tandai sebagai used
-    await update(codeRef,{ used:true });
-};
-</script>
+<div class="cards">
+  <div class="card">Kartu 1</div>
+  <div class="card">Kartu 2</div>
+  <div class="card">Kartu 3</div>
+  <div class="card">Kartu 4</div>
+  <div class="card">Kartu 5</div>
+  <div class="card">Kartu 6</div>
+  <div class="card">Kartu 7</div>
+  <div class="card">Kartu 8</div>
+  <div class="card">Kartu 9</div>
+</div>
 
 </body>
 </html>
