--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <main class="wrap" role="main" aria-live="polite">
     <header>
       <div class="title">
-        <h1>Event Tebak Kartu — Natal</h1>
+        <h1>Event Tebak Kartu — Natal KASINOJP</h1>
         <div style="display:block">
           <p class="subtitle">Masukkan kode yang diberikan admin, pilih maksimal 3 kartu — kode hanya sekali pakai</p>
         </div>
