--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 
 <div class="prize-list">
   <div class="prize">🎁 Platinum<br/><small>25,000</small></div>
-  <div class="prize">🎅 Diamond<br/><small>150,000</small></div>
-  <div class="prize">❄ Super Diamond<br/><small>500,000</small></div>
+  <div class="prize">🎅 Diamond<br/><small>50,000</small></div>
+  <div class="prize">❄ Super Diamond<br/><small>100,000</small></div>
+  <div class="prize">❄ PERFECT DIAMOND<br/><small>300,000</small></div>
+  <div class="prize">❄ GARLIC DIAMOND<br/><small>600,000</small></div>
 </div>
 
 <section id="gridWrap" class="grid"></section>
