--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
   .dec .snow{position:absolute;width:8px;height:8px;background:#fff;border-radius:50%;opacity:.85;animation:snowFall linear infinite}
   @keyframes snowFall{0%{transform:translateY(-10px)}100%{transform:translateY(110vh)}}
 
-  .wrap{width:100%; max-width:480px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12)); border-radius:18px; padding:20px; border:1px solid rgba(212,175,55,0.08); box-shadow:0 10px 40px rgba(2,6,23,0.6); position:relative; z-index:1; margin-bottom:40px;}
+  .wrap{
+    width:100%; max-width:480px;
+    background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12));
+    border-radius:18px;
+    padding:20px;
+    border:1px solid rgba(212,175,55,0.08);
+    box-shadow:0 10px 40px rgba(2,6,23,0.6);
+    position:relative;
+    z-index:1;
+    margin-bottom:40px;
+  }
   header{display:flex;align-items:center;gap:16px;justify-content:space-between;flex-wrap:wrap}
   .title{display:flex;gap:12px;align-items:center;}
   .title h1{margin:0;font-size:26px;color:var(--gold);text-shadow:0 4px 18px rgba(212,175,55,.12)}
@@ -41,12 +51,51 @@
   input[type="text"]{padding:12px 14px;border-radius:10px;border:none;background:#0b1216;color:#fff;min-width:180px;flex:1;font-weight:600}
   .btn{background:var(--gold);color:#111;padding:11px 16px;border-radius:10px;border:none;font-weight:700;cursor:pointer}
   .btn:disabled{opacity:.6;cursor:not-allowed}
-  .prize-list{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap;justify-content:center}
-  .prize{flex:1 1 28%; min-width:160px; padding:14px; border-radius:12px; background:linear-gradient(135deg,#ff4d4d,#ffb84d,#4caf50); color:#111;font-weight:800;text-align:center;font-size:16px;box-shadow:0 8px 30px rgba(0,0,0,.45); border:2px solid rgba(255,255,255,.12); position:relative;}
+
+  /* ===== Modifikasi prize-list & prize ===== */
+  .prize-list{
+    display:flex;
+    gap:12px;
+    margin-top:18px;
+    flex-wrap:wrap;
+    justify-content:center;
+    background: linear-gradient(135deg, rgba(255,255,255,0.05), rgba(0,0,0,0.15));
+    border-radius:18px;
+    padding:12px;
+    border: 1px solid rgba(255,255,255,0.08);
+  }
+  .prize{
+    flex:1 1 28%;
+    min-width:160px;
+    padding:14px;
+    border-radius:12px;
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
+    color:#111;
+    font-weight:800;
+    text-align:center;
+    font-size:16px;
+    box-shadow:0 10px 30px rgba(255, 255, 255, 0.2), 0 8px 30px rgba(0,0,0,.45);
+    border:2px solid rgba(255,255,255,.15);
+    position:relative;
+    transition: transform .3s ease, box-shadow .3s ease;
+  }
+  .prize:hover{
+    transform: translateY(-5px) scale(1.03);
+    box-shadow: 0 15px 40px rgba(255, 255, 255, 0.25), 0 12px 30px rgba(0,0,0,.6);
+  }
   .prize::before{content:"🎄";position:absolute;left:10px;top:-10px;font-size:20px}
   .prize small{display:block;color:#222;font-weight:700;margin-top:6px;font-size:12px}
+
+  /* ===== Grid kartu ===== */
   .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:22px}
-  .card{height:150px;border-radius:14px;perspective:1200px;position:relative;cursor:pointer}
+  .card{
+    height:150px;
+    border-radius:14px;
+    perspective:1200px;
+    position:relative;
+    cursor:pointer;
+    transition: transform .3s ease;
+  }
   .card.locked{filter:grayscale(.25) blur(.2px);cursor:not-allowed;opacity:.9}
   .card-inner{position:relative;width:100%;height:100%;transition:transform .6s;transform-style:preserve-3d;border-radius:14px}
   .card.flip .card-inner{transform:rotateY(180deg)}
@@ -54,6 +103,18 @@
   .card-front{background:linear-gradient(180deg,#071018,#0b1013);border:1px solid rgba(255,255,255,0.04);color:var(--muted);font-size:18px}
   .card-back{background:linear-gradient(135deg,#fff7d0,#ffd87a);transform:rotateY(180deg);color:#111;font-size:18px}
   .card .label{font-weight:800}
+
+  /* ===== Glow berkedip kartu ===== */
+  .card-glow{
+    animation: glowBlink 1.2s infinite;
+    border: 2px solid #ffd700;
+    box-shadow: 0 0 15px #ffd700, 0 0 25px #ffef9f, 0 0 35px #fff7d0;
+  }
+  @keyframes glowBlink {
+    0%, 100% { box-shadow: 0 0 8px #ffd700, 0 0 16px #ffef9f; border-color: #ffd700; }
+    50% { box-shadow: 0 0 20px #ffd700, 0 0 30px #ffef9f, 0 0 40px #fff7d0; border-color: #ffef9f; }
+  }
+
   .result{margin-top:18px;display:flex;flex-direction:column;gap:8px;align-items:center}
   .result .small{color:var(--muted);font-size:13px}
   .confetti{position:fixed;width:8px;height:8px;border-radius:2px;pointer-events:none;animation:confettiDrop 900ms linear forwards;z-index:20}
@@ -132,7 +193,7 @@ function buildGrid(){
   gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
     const c=document.createElement('div');
-    c.className='card locked';
+    c.className='card locked card-glow';
     c.dataset.index=i;
     c.innerHTML=`
       <div class="card-inner">
@@ -157,8 +218,8 @@ async function verifyCode(code){
   try{
     const usedSnap = await get(ref(db,"gameConfig/usedCodes/"+code));
     if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai. Silahkan hubungi admin"};}
-    if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin"};
-    if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah"};
+    if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin";}
+    if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah";}
     return {ok:true,msg:"Kode valid"};
   }catch(err){console.error(err);return {ok:false,msg:"Error verifikasi"};}
 }
@@ -171,7 +232,6 @@ async function onCardClick(e){
   const cardsArr=serverConfig?.cards||[];
   let val=cardsArr[idx]||'Kosong';
   
-  // jika berbeda dari kartu pertama → ZONK
   if(selectedCount>0 && val!==cardsArr[0]) val='ZONK';
   
   el.classList.add('flip');
