--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
 
 <div class="prize-list">
   <div class="prize">🎁 Platinum<br/><small>10,000</small></div>
-  <div class="prize">🎅 Diamond<br/><small>25,000</small></div>
-  <div class="prize">❄ Super Diamond<br/><small>50,000</small></div>
-  <div class="prize">❄ PERFECT DIAMOND<br/><small>150,000</small></div>
-  <div class="prize">❄ GARLIC DIAMOND<br/><small>300,000</small></div>
+  <div class="prize">🎁 Diamond<br/><small>25,000</small></div>
+  <div class="prize">🎁 silver Diamond<br/><small>50,000</small></div>
+  <div class="prize">🎁 PERFECT DIAMOND<br/><small>100,000</small></div>
+  <div class="prize">🎁 EPICK DIAMOND<br/><small>150,000</small></div>
+  <div class="prize">🎁 MYTIC DIAMOND<br/><small>400,000</small></div>
 </div>
 
 <section id="gridWrap" class="grid"></section>
