--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 </div>
 
 <div class="prize-list">
-  <div class="prize">🎁⛄ Platinum<br/><small>10,000</small></div>
-  <div class="prize">🎁⛄ Diamond<br/><small>25,000</small></div>
-  <div class="prize">🎁⛄ silver Diamond<br/><small>50,000</small></div>
+  <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
+  <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
+  <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
   <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
   <div class="prize">🎁⛄ EPICK DIAMOND<br/><small>150,000</small></div>
   <div class="prize">🎁⛄ MYTIC DIAMOND<br/><small>400,000</small></div>
