--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
   <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
   <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
-  <div class="prize">🎁⛄ EPICK DIAMOND<br/><small>150,000</small></div>
-  <div class="prize">🎁⛄ MYTIC DIAMOND<br/><small>400,000</small></div>
+  <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
+  <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
 </div>
 
 <section id="gridWrap" class="grid"></section>
